<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('putovanje_slika', function (Blueprint $table) {
            $table->id();
            $table->foreignId('id_putovanja')->constrained('putovanje')->onDelete('cascade');
            $table->string('slika');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('putovanje_slika');
    }
};
